--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -1,5 +1,5 @@
 {
-  "importexport": "数据导入&导出",
+  "importexport": "导入&导出",
   "importexport_icon": "sap-icon://share",
   "importexport_func_dataexporttemplate": "数据导出模板",
   "importexport_app_dataexporttemplate_list": "数据导出模板列表",
