--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -31,6 +31,6 @@
   "importexport_export_criteria": "导出条件",
   "importexport_export_bo": "导出对象",
   "importexport_export_template": "导出模板",
-  "importexport_export_result": "导出结果",
+  "importexport_export_conditions": "导出的查询条件",
   "importexport_closing_delimiter": "----结束----"
 }
