--- a/ibas.importexport/src/main/resources/i18n/locale.ie.properties
+++ b/ibas.importexport/src/main/resources/i18n/locale.ie.properties
@@ -1,5 +1,4 @@
-msg_importexport_not_found_transformer = 没有找到[%s]对应的转换者。
-msg_importexport_not_found_class = 没有找到[%s]对应的类。
-msg_importexport_not_found_serializer = 没有找到[%s]对应的序列化程序。
-msg_importexport_invaild_data = 无效的数据。
-msg_importexport_invaild_file_data = 无效的文件数据。
+msg_ie_not_found_transformer = 没有找到[%s]对应的转换者。
+msg_ie_not_found_class = 没有找到[%s]对应的类。
+msg_ie_not_found_serializer = 没有找到[%s]对应的序列化程序。
+msg_ie_invaild_data = 无效的数据。
