--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -20,6 +20,7 @@
   "importexport_import": "导入",
   "importexport_import_data": "导入数据",
   "importexport_import_result": "导入结果",
+  "importexport_update_exists_data": "更新数据",
   "importexport_businessobject_key": "对象标记",
   "importexport_please_choose_file": "请选择导入的文件",
   "importexport_network_error": "出现网络错误，请稍后重试",
