--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -1,11 +1,11 @@
 {
   "importexport": "导入&导出",
   "importexport_icon": "sap-icon://share",
-  "importexport_func_dataexporttemplate": "数据导出模板",
-  "importexport_app_dataexporttemplate_list": "数据导出模板列表",
-  "importexport_app_dataexporttemplate_choose": "数据导出模板选择",
-  "importexport_app_dataexporttemplate_view": "数据导出模板查看",
-  "importexport_app_dataexporttemplate_edit": "数据导出模板编辑",
+  "importexport_func_exporttemplate": "导出模板",
+  "importexport_app_exporttemplate_list": "导出模板列表",
+  "importexport_app_exporttemplate_choose": "导出模板选择",
+  "importexport_app_exporttemplate_view": "导出模板查看",
+  "importexport_app_exporttemplate_edit": "导出模板编辑",
   "importexport_service_dataexport": "数据导出服务",
   "importexport_export": "导出",
   "importexport_export_mode_name": "名称",
