--- a/ibas.importexport/src/main/resources/i18n/locale.ie.properties
+++ b/ibas.importexport/src/main/resources/i18n/locale.ie.properties
@@ -6,3 +6,5 @@ msg_ie_not_found_template = 没有找到[%s]模板。
 msg_ie_no_output_data = 没有输出数据。
 msg_ie_no_transformed_data = 没有转换的数据。
 msg_ie_exporter_description = 模板为[%s]
+msg_ie_no_template = 没有模板。
+msg_ie_no_input_data = 没有输入数据。
