继续html模板解析

--- a/ibas.importexport/src/main/resources/i18n/locale.ie.properties
+++ b/ibas.importexport/src/main/resources/i18n/locale.ie.properties
@@ -8,3 +8,4 @@ msg_ie_no_transformed_data = 没有转换的数据。
 msg_ie_exporter_description = 模板为[%s]
 msg_ie_no_template = 没有模板。
 msg_ie_no_input_data = 没有输入数据。
+msg_ie_template_size_not_enough = 模板[%s]大小不足。
