--- a/ibas.importexport.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -134,6 +134,7 @@
         "em_italic": "斜体",
         "em_bold_italic": "粗斜体",
         "em_text": "文本",
-        "em_path": "路径"
+        "em_path": "路径",
+        "em_query": "查询"
     }
 ]
