--- a/ibas.importexport.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -124,17 +124,33 @@
         "bo_exporttemplate_closing_delimiter": "----结束----"
     },
     {
-        "em_right": "靠右",
-        "em_left": "靠左",
-        "em_center": "中间",
-        "em_top": "靠上",
-        "em_bottom": "靠下",
-        "em_regular": "常规",
-        "em_bold": "粗体",
-        "em_italic": "斜体",
-        "em_bold_italic": "粗斜体",
-        "em_text": "文本",
-        "em_path": "路径",
-        "em_query": "查询"
+        "em_areatype_page_header": "页眉",
+        "em_areatype_start_section": "开始区",
+        "em_areatype_repetition_header": "重复区头",
+        "em_areatype_repetition": "重复区",
+        "em_areatype_repetition_footer": "重复区脚",
+        "em_areatype_end_section": "结束区",
+        "em_areatype_page_footer": "页脚区"
+    },
+    {
+        "em_justificationhorizontal_right": "靠右",
+        "em_justificationhorizontal_left": "靠左",
+        "em_justificationhorizontal_center": "中间"
+    },
+    {
+        "em_justificationvertical_top": "靠上",
+        "em_justificationvertical_bottom": "靠下",
+        "em_justificationvertical_center": "中间"
+    },
+    {
+        "em_textstyle_regular": "常规",
+        "em_textstyle_bold": "粗体",
+        "em_textstyle_italic": "斜体",
+        "em_textstyle_bold_italic": "粗斜体"
+    },
+    {
+        "em_datasourcetype_text": "文本",
+        "em_datasourcetype_path": "路径",
+        "em_datasourcetype_query": "查询"
     }
 ]
