导出模板增加附录

--- a/ibas.importexport.service/src/main/webapp/resources/languages/bos.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/bos.zh_CN.json
@@ -61,6 +61,7 @@
         "bo_exporttemplate_pagefooterwidth": "页脚-宽度",
         "bo_exporttemplate_pagefooterheight": "页脚-高度",
         "bo_exporttemplate_exporttemplateitems": "导出模板-项集合",
+        "bo_exporttemplate_exporttemplateappendixs": "导出模板-附录集合",
         "bo_exporttemplate_area_left": "区域-左坐标",
         "bo_exporttemplate_area_top": "区域-上坐标",
         "bo_exporttemplate_area_width": "区域-宽度",
@@ -80,6 +81,7 @@
         "bo_exporttemplateitem_createactionid": "创建动作标识",
         "bo_exporttemplateitem_updateactionid": "更新动作标识",
         "bo_exporttemplateitem_area": "区域",
+        "bo_exporttemplateitem_areasub": "区域子项",
         "bo_exporttemplateitem_itemid": "项标识",
         "bo_exporttemplateitem_itemtype": "项类型",
         "bo_exporttemplateitem_itemleft": "项左坐标",
@@ -123,6 +125,32 @@
         "bo_exporttemplateitem_repetitionfooters": "重复区脚",
         "bo_exporttemplateitem_endsections": "结束区",
         "bo_exporttemplateitem_pagefooters": "页脚区",
+        "bo_exporttemplateappendix": "导出模板-附录",
+        "bo_exporttemplateappendix_objectkey": "编号",
+        "bo_exporttemplateappendix_objectcode": "类型",
+        "bo_exporttemplateappendix_lineid": "行号",
+        "bo_exporttemplateappendix_datasource": "数据源",
+        "bo_exporttemplateappendix_loginst": "实例号（版本）",
+        "bo_exporttemplateappendix_createdate": "创建日期",
+        "bo_exporttemplateappendix_createtime": "创建时间",
+        "bo_exporttemplateappendix_updatedate": "修改日期",
+        "bo_exporttemplateappendix_updatetime": "修改时间",
+        "bo_exporttemplateappendix_createusersign": "创建用户",
+        "bo_exporttemplateappendix_updateusersign": "修改用户",
+        "bo_exporttemplateappendix_createactionid": "创建动作标识",
+        "bo_exporttemplateappendix_updateactionid": "更新动作标识",
+        "bo_exporttemplateappendix_pageorder": "页序号",
+        "bo_exporttemplateappendix_pageheader": "使用页眉",
+        "bo_exporttemplateappendix_pagefooter": "使用页脚",
+        "bo_exporttemplateappendix_contentleft": "内容-左坐标",
+        "bo_exporttemplateappendix_contenttop": "内容-上坐标",
+        "bo_exporttemplateappendix_contentwidth": "内容-宽度",
+        "bo_exporttemplateappendix_contentheight": "内容-高度",
+        "bo_exporttemplateappendix_backgroundred": "背景色-红",
+        "bo_exporttemplateappendix_backgroundgreen": "背景色-绿",
+        "bo_exporttemplateappendix_backgroundblue": "背景色-蓝",
+        "bo_exporttemplateappendix_backgroundimage": "背景图",
+        "bo_exporttemplateappendix_contents": "附录内容",
         "bo_exporttemplate_closing_delimiter": "----结束----"
     },
     {
