--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -15,8 +15,10 @@
   "importexport_import_icon": "sap-icon://inbox",
   "importexport_export_json": "导出为json数据",
   "importexport_export_csv": "导出为csv数据",
+  "importexport_export_xlsx": "导出为Excel数据",
   "importexport_export_result_can_not_showed": "[{0}]的导出结果无法显示",
   "importexport_export_is_running": "正在执行[{0}]，请稍后",
+  "importexport_service_fileparsing": "文件解析",
   "importexport_func_dataimport": "数据导入",
   "importexport_app_dataimport": "数据导入",
   "importexport_import": "导入",
