--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.zh_CN.json
@@ -22,11 +22,15 @@
   "importexport_func_dataimport": "数据导入",
   "importexport_app_dataimport": "数据导入",
   "importexport_import": "导入",
-  "importexport_import_data": "导入数据",
-  "importexport_import_result": "导入结果",
-  "importexport_update_exists_data": "更新数据",
+  "importexport_import_content": "导入内容：",
+  "importexport_import_result": "导入结果：",
+  "importexport_update_exists_data": "更新方式：",
+  "importexport_import_files": "数据文件：",
+  "importexport_import_data": "开始导入",
+  "importexport_import_files_continue": "导入[{0}]个文件，是否继续?",
   "importexport_businessobject_key": "对象标记",
   "importexport_please_choose_file": "请选择导入的文件",
+  "importexport_choose_files": "选择文件",
   "importexport_network_error": "出现网络错误，请稍后重试",
   "importexport_importing": "正在导入请稍后",
   "importexport_import_done": "导入完成",
@@ -48,6 +52,6 @@
   "importexport_title_size": "规格",
   "importexport_page_number": "第{0}页",
   "importexport_remove_page_continue": "删除{0}，是否继续?",
-  "importexport_import_data_information": "操作成功：识别{0}条数据，导入{1}条数据",
+  "importexport_import_data_information": "操作成功：识别[{0}]条数据，保存[{1}]条数据",
   "importexport_closing_delimiter": "----结束----"
 }
