--- a/ibas.importexport/src/main/resources/i18n/locale.ie.properties
+++ b/ibas.importexport/src/main/resources/i18n/locale.ie.properties
@@ -8,4 +8,5 @@ msg_ie_no_transformed_data = 没有转换的数据。
 msg_ie_exporter_description = 导出为%s数据，模板[%s(%s*%s)]
 msg_ie_no_template = 没有模板。
 msg_ie_no_input_data = 没有输入数据。
+msg_ie_input_data_faild = 第[%s]个数据发生错误：
 msg_ie_template_size_not_enough = 模板[%s]大小不足。
