增加英文描述

--- a/ibas.importexport.service/src/main/webapp/resources/languages/bos.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/bos.json
@@ -1,2 +1,207 @@
-{
-}
+[
+    {
+        "bo_exporttemplate": "Export Template",
+        "bo_exporttemplate_objectkey": "Object Key",
+        "bo_exporttemplate_objectcode": "Object Type",
+        "bo_exporttemplate_loginst": "Instance Number (Version)",
+        "bo_exporttemplate_datasource": "Data Source",
+        "bo_exporttemplate_series": "Service Series",
+        "bo_exporttemplate_createdate": "Creation Date",
+        "bo_exporttemplate_createtime": "Creation Time",
+        "bo_exporttemplate_updatedate": "Modification Date",
+        "bo_exporttemplate_updatetime": "Modification Time",
+        "bo_exporttemplate_createusersign": "Created By",
+        "bo_exporttemplate_updateusersign": "Last Modified By",
+        "bo_exporttemplate_createactionid": "Create Action ID",
+        "bo_exporttemplate_updateactionid": "Update Action ID",
+        "bo_exporttemplate_dataowner": "Data Owner",
+        "bo_exporttemplate_teammembers": "Team Members",
+        "bo_exporttemplate_organization": "Data Organization",
+        "bo_exporttemplate_name": "Name",
+        "bo_exporttemplate_activated": "Activated",
+        "bo_exporttemplate_language": "Language",
+        "bo_exporttemplate_category": "Category",
+        "bo_exporttemplate_bocode": "Related Business Object",
+        "bo_exporttemplate_applicationid": "Related Application",
+        "bo_exporttemplate_notes": "Notes",
+        "bo_exporttemplate_width": "Output Width",
+        "bo_exporttemplate_height": "Output Height",
+        "bo_exporttemplate_dpi": "Output DPI",
+        "bo_exporttemplate_marginleft": "Left Margin",
+        "bo_exporttemplate_marginright": "Right Margin",
+        "bo_exporttemplate_margintop": "Top Margin",
+        "bo_exporttemplate_marginbottom": "Bottom Margin",
+        "bo_exporttemplate_marginarea": "Area Margin",
+        "bo_exporttemplate_pageheaderleft": "Page Header - Left Coordinate",
+        "bo_exporttemplate_pageheadertop": "Page Header - Top Coordinate",
+        "bo_exporttemplate_pageheaderwidth": "Page Header - Width",
+        "bo_exporttemplate_pageheaderheight": "Page Header - Height",
+        "bo_exporttemplate_startsectionleft": "Start Section - Left Coordinate",
+        "bo_exporttemplate_startsectiontop": "Start Section - Top Coordinate",
+        "bo_exporttemplate_startsectionwidth": "Start Section - Width",
+        "bo_exporttemplate_startsectionheight": "Start Section - Height",
+        "bo_exporttemplate_repetitionheaderleft": "Repetition Header - Left Coordinate",
+        "bo_exporttemplate_repetitionheadertop": "Repetition Header - Top Coordinate",
+        "bo_exporttemplate_repetitionheaderwidth": "Repetition Header - Width",
+        "bo_exporttemplate_repetitionheaderheight": "Repetition Header - Height",
+        "bo_exporttemplate_repetitionleft": "Repetition Area - Left Coordinate",
+        "bo_exporttemplate_repetitiontop": "Repetition Area - Top Coordinate",
+        "bo_exporttemplate_repetitionwidth": "Repetition Area - Width",
+        "bo_exporttemplate_repetitionheight": "Repetition Area - Height",
+        "bo_exporttemplate_repetitionfooterleft": "Repetition Footer - Left Coordinate",
+        "bo_exporttemplate_repetitionfootertop": "Repetition Footer - Top Coordinate",
+        "bo_exporttemplate_repetitionfooterwidth": "Repetition Footer - Width",
+        "bo_exporttemplate_repetitionfooterheight": "Repetition Footer - Height",
+        "bo_exporttemplate_endsectionleft": "End Section - Left Coordinate",
+        "bo_exporttemplate_endsectiontop": "End Section - Top Coordinate",
+        "bo_exporttemplate_endsectionwidth": "End Section - Width",
+        "bo_exporttemplate_endsectionheight": "End Section - Height",
+        "bo_exporttemplate_pagefooterleft": "Page Footer - Left Coordinate",
+        "bo_exporttemplate_pagefootertop": "Page Footer - Top Coordinate",
+        "bo_exporttemplate_pagefooterwidth": "Page Footer - Width",
+        "bo_exporttemplate_pagefooterheight": "Page Footer - Height",
+        "bo_exporttemplate_exporttemplateitems": "Export Template Items",
+        "bo_exporttemplate_exporttemplateappendixs": "Export Template Appendixes",
+        "bo_exporttemplate_area_left": "Area - Left Coordinate",
+        "bo_exporttemplate_area_top": "Area - Top Coordinate",
+        "bo_exporttemplate_area_width": "Area - Width",
+        "bo_exporttemplate_area_height": "Area - Height",
+        "bo_exporttemplateitem": "Export Template Item",
+        "bo_exporttemplateitem_objectkey": "Object Key",
+        "bo_exporttemplateitem_objectcode": "Object Type",
+        "bo_exporttemplateitem_lineid": "Line ID",
+        "bo_exporttemplateitem_datasource": "Data Source",
+        "bo_exporttemplateitem_loginst": "Instance Number (Version)",
+        "bo_exporttemplateitem_createdate": "Creation Date",
+        "bo_exporttemplateitem_createtime": "Creation Time",
+        "bo_exporttemplateitem_updatedate": "Modification Date",
+        "bo_exporttemplateitem_updatetime": "Modification Time",
+        "bo_exporttemplateitem_createusersign": "Created By",
+        "bo_exporttemplateitem_updateusersign": "Last Modified By",
+        "bo_exporttemplateitem_createactionid": "Create Action ID",
+        "bo_exporttemplateitem_updateactionid": "Update Action ID",
+        "bo_exporttemplateitem_area": "Area",
+        "bo_exporttemplateitem_areasub": "Sub Area",
+        "bo_exporttemplateitem_itemid": "Item ID",
+        "bo_exporttemplateitem_itemtype": "Item Type",
+        "bo_exporttemplateitem_itemleft": "Item Left Coordinate",
+        "bo_exporttemplateitem_itemtop": "Item Top Coordinate",
+        "bo_exporttemplateitem_sourcetype": "Data Source Type",
+        "bo_exporttemplateitem_itemstring": "Item String",
+        "bo_exporttemplateitem_valueformat": "Display Format",
+        "bo_exporttemplateitem_itemvisible": "Item Visibility",
+        "bo_exporttemplateitem_itemwidth": "Item Width",
+        "bo_exporttemplateitem_itemheight": "Item Height",
+        "bo_exporttemplateitem_marginleft": "Left Margin",
+        "bo_exporttemplateitem_marginright": "Right Margin",
+        "bo_exporttemplateitem_margintop": "Top Margin",
+        "bo_exporttemplateitem_marginbottom": "Bottom Margin",
+        "bo_exporttemplateitem_lineleft": "Left Line Width",
+        "bo_exporttemplateitem_lineright": "Right Line Width",
+        "bo_exporttemplateitem_linetop": "Top Line Width",
+        "bo_exporttemplateitem_linebottom": "Bottom Line Width",
+        "bo_exporttemplateitem_linestyle": "Line Style",
+        "bo_exporttemplateitem_fontname": "Font Name",
+        "bo_exporttemplateitem_fontsize": "Font Size",
+        "bo_exporttemplateitem_textstyle": "Text Style",
+        "bo_exporttemplateitem_textsegment": "Text Segment",
+        "bo_exporttemplateitem_justificationhorizontal": "Horizontal Alignment",
+        "bo_exporttemplateitem_justificationvertical": "Vertical Alignment",
+        "bo_exporttemplateitem_backgroundred": "Background Color - Red",
+        "bo_exporttemplateitem_backgroundgreen": "Background Color - Green",
+        "bo_exporttemplateitem_backgroundblue": "Background Color - Blue",
+        "bo_exporttemplateitem_foregroundred": "Foreground Color - Red",
+        "bo_exporttemplateitem_foregroundgreen": "Foreground Color - Green",
+        "bo_exporttemplateitem_foregroundblue": "Foreground Color - Blue",
+        "bo_exporttemplateitem_markerred": "Highlight Color - Red",
+        "bo_exporttemplateitem_markergreen": "Highlight Color - Green",
+        "bo_exporttemplateitem_markerblue": "Highlight Color - Blue",
+        "bo_exporttemplateitem_borderred": "Border Color - Red",
+        "bo_exporttemplateitem_bordergreen": "Border Color - Green",
+        "bo_exporttemplateitem_borderblue": "Border Color - Blue",
+        "bo_exporttemplateitem_pageheaders": "Page Header Area",
+        "bo_exporttemplateitem_startsections": "Start Section Area",
+        "bo_exporttemplateitem_repetitionheaders": "Repetition Header Area",
+        "bo_exporttemplateitem_repetitions": "Repetition Area",
+        "bo_exporttemplateitem_repetitionfooters": "Repetition Footer Area",
+        "bo_exporttemplateitem_endsections": "End Section Area",
+        "bo_exporttemplateitem_pagefooters": "Page Footer Area",
+        "bo_exporttemplateitem_appendixs": "Appendixes",
+        "bo_exporttemplateappendix": "Export Template Appendix",
+        "bo_exporttemplateappendix_objectkey": "Object Key",
+        "bo_exporttemplateappendix_objectcode": "Object Type",
+        "bo_exporttemplateappendix_lineid": "Line ID",
+        "bo_exporttemplateappendix_datasource": "Data Source",
+        "bo_exporttemplateappendix_loginst": "Instance Number (Version)",
+        "bo_exporttemplateappendix_createdate": "Creation Date",
+        "bo_exporttemplateappendix_createtime": "Creation Time",
+        "bo_exporttemplateappendix_updatedate": "Modification Date",
+        "bo_exporttemplateappendix_updatetime": "Modification Time",
+        "bo_exporttemplateappendix_createusersign": "Created By",
+        "bo_exporttemplateappendix_updateusersign": "Last Modified By",
+        "bo_exporttemplateappendix_createactionid": "Create Action ID",
+        "bo_exporttemplateappendix_updateactionid": "Update Action ID",
+        "bo_exporttemplateappendix_pageorder": "Page Order",
+        "bo_exporttemplateappendix_pageheader": "Use Page Header",
+        "bo_exporttemplateappendix_pagefooter": "Use Page Footer",
+        "bo_exporttemplateappendix_contentleft": "Content - Left Coordinate",
+        "bo_exporttemplateappendix_contenttop": "Content - Top Coordinate",
+        "bo_exporttemplateappendix_contentwidth": "Content - Width",
+        "bo_exporttemplateappendix_contentheight": "Content - Height",
+        "bo_exporttemplateappendix_backgroundred": "Background Color - Red",
+        "bo_exporttemplateappendix_backgroundgreen": "Background Color - Green",
+        "bo_exporttemplateappendix_backgroundblue": "Background Color - Blue",
+        "bo_exporttemplateappendix_backgroundimage": "Background Image",
+        "bo_exporttemplateappendix_contents": "Appendix Contents",
+        "bo_exporttemplate_closing_delimiter": "----End----"
+    },
+    {
+        "template_item_type_text": "Text",
+        "template_item_type_image": "Image"
+    },
+    {
+        "em_areatype_page_header": "Page Header",
+        "em_areatype_start_section": "Start Section",
+        "em_areatype_repetition_header": "Repetition Header",
+        "em_areatype_repetition": "Repetition Area",
+        "em_areatype_repetition_footer": "Repetition Footer",
+        "em_areatype_end_section": "End Section",
+        "em_areatype_page_footer": "Page Footer"
+    },
+    {
+        "em_justificationhorizontal_right": "Right",
+        "em_justificationhorizontal_left": "Left",
+        "em_justificationhorizontal_center": "Center"
+    },
+    {
+        "em_justificationvertical_top": "Top",
+        "em_justificationvertical_bottom": "Bottom",
+        "em_justificationvertical_center": "Center"
+    },
+    {
+        "em_textstyle_regular": "Regular",
+        "em_textstyle_bold": "Bold",
+        "em_textstyle_italic": "Italic",
+        "em_textstyle_bold_italic": "Bold Italic"
+    },
+    {
+        "em_textsegment_word": "Text",
+        "em_textsegment_cell": "Cell"
+    },
+    {
+        "em_datasourcetype_text": "Text",
+        "em_datasourcetype_path": "Path",
+        "em_datasourcetype_query": "Query"
+    },
+    {
+        "em_linestyle_solid": "Solid",
+        "em_linestyle_dashed": "Dashed",
+        "em_linestyle_dotted": "Dotted",
+        "em_linestyle_double": "Double"
+    },
+    {
+        "em_dataupdatemethod_skip": "Skip (Keep Original)",
+        "em_dataupdatemethod_replace": "Replace (Delete Original)",
+        "em_dataupdatemethod_modify": "Modify (Update Original)"
+    }
+]
