--- a/ibas.importexport.service/src/main/webapp/resources/languages/importexport.json
+++ b/ibas.importexport.service/src/main/webapp/resources/languages/importexport.json
@@ -1,2 +1,64 @@
 {
+    "importexport": "Import & Export",
+    "importexport_icon": "sap-icon://share",
+    "importexport_func_exporttemplate": "Export Template",
+    "importexport_app_exporttemplate_list": "Export Template List",
+    "importexport_app_exporttemplate_choose": "Choose Export Template",
+    "importexport_app_exporttemplate_view": "View Export Template",
+    "importexport_app_exporttemplate_edit": "Edit Export Template",
+    "importexport_service_dataexport": "Data Export",
+    "importexport_service_datatableexport": "Data Table Export",
+    "importexport_export": "Export",
+    "importexport_export_mode_name": "Name",
+    "importexport_export_mode_description": "Description",
+    "importexport_export_icon": "sap-icon://outbox",
+    "importexport_import_icon": "sap-icon://inbox",
+    "importexport_export_json": "Export as JSON Data",
+    "importexport_export_csv": "Export as CSV Data",
+    "importexport_export_xlsx": "Export as Excel Data",
+    "importexport_export_result_can_not_showed": "Unable to display export results for [{0}]",
+    "importexport_export_is_running": "Executing [{0}], please wait",
+    "importexport_service_fileparsing": "File Parsing",
+    "importexport_func_dataimport": "Data Import",
+    "importexport_app_dataimport": "Data Import",
+    "importexport_import": "Import",
+    "importexport_import_content": "Import Content:",
+    "importexport_import_result": "Import Result:",
+    "importexport_update_exists_data": "Update Method:",
+    "importexport_import_files": "Data Files:",
+    "importexport_import_data": "Start Import",
+    "importexport_import_files_continue": "Import [{0}] files, continue?",
+    "importexport_businessobject_key": "Object Key",
+    "importexport_please_choose_file": "Please choose a file to import",
+    "importexport_choose_files": "Choose Files",
+    "importexport_network_error": "Network error occurred, please try again later",
+    "importexport_importing": "Importing, please wait",
+    "importexport_import_done": "Import completed",
+    "importexport_func_dataexport": "Data Export",
+    "importexport_app_dataexport": "Data Export",
+    "importexport_app_dataprint": "Data Print",
+    "importexport_app_datatableprint": "Data Table Print",
+    "importexport_app_viewexport": "Table Export",
+    "importexport_print_icon": "sap-icon://print",
+    "importexport_exporting": "Exporting, please wait",
+    "importexport_export_criteria": "Export Criteria",
+    "importexport_export_bo": "Export Object",
+    "importexport_export_template": "Export Template",
+    "importexport_please_template": "Please select a template",
+    "importexport_print": "Print",
+    "importexport_preview": "Preview",
+    "importexport_code_pretty": "Code Beautify",
+    "importexport_export_conditions": "Query conditions for export (template only if no conditions)",
+    "importexport_title_general": "General",
+    "importexport_title_size": "Size",
+    "importexport_page_number": "Page {0}",
+    "importexport_remove_page_continue": "Delete {0}, continue?",
+    "importexport_import_data_information": "Operation successful: Identified [{0}] data entries, saved [{1}] data entries",
+    "importexport_resize_column": "Adjust Column Width",
+    "importexport_export_content": "Export Content",
+    "importexport_export_content_all": "Export Content (All)",
+    "importexport_export_content_selected": "Export Content (Selected)",
+    "importexport_export_all": "Export All",
+    "importexport_export_selected": "Export Selected",
+    "importexport_closing_delimiter": "---- End ----"
 }
